# kroki

./: CHANGELOG.md  CLAUDE.md  README.md  kroki.cabal
.github/workflows/: release.yml
app/: Main.hs  Romaji.hs
src/: Api.hs  Cli.hs  Config.hs  Tui.hs  Util.hs
src/Tui/: Draw.hs  Event.hs  State.hs
test/: Spec.hs  TuiSpec.hs
