cabal-version:      3.0
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.

name:               kroki
version:            0.9.4.0
synopsis:           Minimal WaniKani review client for the terminal
description:
  A CLI/TUI application for doing WaniKani kanji and vocabulary reviews
  without leaving the terminal. Features include live romaji→hiragana
  conversion, British/American spelling normalisation, SRS stage display,
  pronunciation audio, and a review schedule overlay.
homepage:           https://github.com/mwkuster/kroki
bug-reports:        https://github.com/mwkuster/kroki/issues
license:            GPL-3.0-only
license-file:       LICENSE
author:             MWK
maintainer:         marc@budabe.eu
copyright:          2024-2026 MWK
category:           Education, Japanese
extra-doc-files:    CHANGELOG.md, README.md
build-type:         Simple

source-repository head
  type:     git
  location: https://github.com/mwkuster/kroki

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -threaded

executable kroki
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    hs-source-dirs:  app, src
    other-modules: Cli, Api, Config, Romaji, Tui, Tui.State, Tui.Draw, Tui.Event, Util
    default-language: GHC2021

    ghc-options:
      -Wall

    build-depends:
        base >=4.16 && <5
      , aeson
      , async
      , bytestring
      , text
      , req
      , optparse-applicative
      , containers
      , time
      , directory
      , filepath
      , random
      , brick
      , vty
      , vector
      , vty-crossplatform
      , process

test-suite kroki-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test, app, src
    other-modules:    Romaji, Tui, Tui.State, Tui.Draw, Tui.Event, Api, Config, TuiSpec, Util
    default-language: GHC2021
    build-depends:
        base >=4.16 && <5
      , text
      , containers
      , hspec
      , aeson
      , bytestring
      , req
      , time
      , directory
      , filepath
      , random
      , brick
      , vty
      , vty-crossplatform
      , vector
      , process
